--- a/windows_playbooks/roles/win_update_check/templates/report.j2
+++ b/windows_playbooks/roles/win_update_check/templates/report.j2
@@ -1,5 +1,2 @@
-{​​​​​% for i in groups[approved_group] %}​​​​​
-    {​​​​​{​​​​​ i }​​​​​}​​​​​:  
-    "{​​​​​{​​​​​ hostvars[i]['win_updates_result'] }​​​​​}​​​​​"
+updates that need to be installed {{ win_updates_result }}
   
-{​​​​​% endfor %}​​​​​
