--- a/windows_playbooks/roles/win_update_check/templates/report.j2
+++ b/windows_playbooks/roles/win_update_check/templates/report.j2
@@ -1,2 +1,2 @@
-updates that need to be installed {{ win_updates_result }}
+updates that need to be installed {{ win_updates_result.found_update_count }}
   
