--- a/windows_playbooks/roles/win_update_check/templates/report.j2
+++ b/windows_playbooks/roles/win_update_check/templates/report.j2
@@ -1,2 +1,4 @@
 updates that need to be installed {{ win_updates_result.found_update_count }}
-  
+updates found {{ win_updates_result.updates }}
+Does server require reboot {{ win_updates_result.reboot_required }}
+Number of updates installed {{ win_updates_result.installed_update_count }}
