--- a/windows_playbooks/roles/win_update_check/templates/report.j2
+++ b/windows_playbooks/roles/win_update_check/templates/report.j2
@@ -1,3 +1,3 @@
 {% for item in groups%}
-{{ ansible_hostname }} {{ win_updates_result.installed_update_count }} {{ win_updates_result.reboot_required }}
+{{ win_updates_result.installed_update_count }} {{ win_updates_result.reboot_required }}
 {% endfor %}
