--- a/windows_playbooks/roles/win_update_check/templates/report.j2
+++ b/windows_playbooks/roles/win_update_check/templates/report.j2
@@ -1,3 +1,6 @@
-{% for i in groups%}
-{{ win_updates_result.installed_update_count }} {{ win_updates_result.reboot_required }}
-{% endfor %}
+{​​​​​​​% for i in groups[approved_group] %}​​​​​​​
+    {​​​​​​​{​​​​​​​ i }​​​​​​​}​​​​​​​:  
+    {​​​​​​​% for update in hostvars[i]['win_updates_result']['updates'] %}​​​​​​​}​​​​​​​
+        "{​​​​​​​{​​​​​​​ hostvars[i]['win_updates_result']['updates'][update]['kb'] }​​​​​​​}​​​​​​​" : "{​​​​​​​{​​​​​​​ hostvars[i]['win_updates_result']['updates'][update]['title'] }​​​​​​​}​​​​​​​" 
+    {​​​​​​​% endfor %}​​​​​​​}​​​​​​​
+{​​​​​​​% endfor %}​​​​​​​ 
