--- a/windows_playbooks/roles/win_update_check/templates/report.j2
+++ b/windows_playbooks/roles/win_update_check/templates/report.j2
@@ -1,3 +1,4 @@
 {% for i in groups[approved_group] %}
-    {{ i }}:  
+    {{ i }}:
+    "{{ hostvars[i]['win_updates_result']['updates'][update]['kb'] }}" : "{{hostvars[i]['win_updates_result']['updates'][update]['title'] }}"
 {% endfor %}
